--- a/vendasKafkaConsumer/pom.xml
+++ b/vendasKafkaConsumer/pom.xml
@@ -31,11 +31,6 @@
       <version>3.2.1</version>
     </dependency>
     <dependency>
-      <groupId>org.apache.kafka</groupId>
-      <artifactId>kafka-clients</artifactId>
-      <version>3.2.1</version>
-    </dependency>
-    <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
       <artifactId>jackson-databind</artifactId>
       <version>${jackson.version}</version>
@@ -54,41 +49,27 @@
   </dependencies>
 
   <build>
-    <finalName>vendasKafkaConsumer</finalName>
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-dependency-plugin</artifactId>
-        <version>3.1.2</version>
+        <artifactId>maven-shade-plugin</artifactId>
+        <version>3.2.4</version>
         <executions>
           <execution>
-            <id>copy-dependencies</id>
-            <phase>prepare-package</phase>
-            <goals>
-              <goal>copy-dependencies</goal>
-            </goals>
             <configuration>
-              <outputDirectory>${project.build.directory}/lib</outputDirectory>
+              <transformers>
+                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                  <mainClass>com.markswell.VedasKafkaConsumer</mainClass>
+                </transformer>
+              </transformers>
+              <finalName>vendasKafkaConsumer</finalName>
             </configuration>
+            <goals>
+              <goal>shade</goal>
+            </goals>
           </execution>
         </executions>
       </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-jar-plugin</artifactId>
-        <version>3.1.2</version>
-        <configuration>
-          <archive>
-            <manifest>
-              <addClasspath>true</addClasspath>
-              <classpathPrefix>lib</classpathPrefix>
-              <mainClass>com.markswell.VedasKafkaConsumer</mainClass>
-            </manifest>
-          </archive>
-          <outputDirectory>${project.build.directory}</outputDirectory>
-        </configuration>
-      </plugin>
-
     </plugins>
   </build>
 
